// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MenuItemCircularProgress > should apply the correct styling, HTML attributes, and allow a ref 1`] = `
<li
  class="rmd-list-item rmd-interaction-surface"
  data-testid="li"
  role="none"
>
  <span
    class="rmd-list-item__text"
  >
    <span
      aria-label="Loading"
      aria-valuemax="100"
      aria-valuemin="0"
      class="rmd-circular-progress rmd-circular-progress--dense rmd-circular-progress--centered rmd-primary-color"
      id="circular-progress-_r_0_"
      role="progressbar"
    >
      <svg
        class="rmd-circular-progress__svg rmd-circular-progress__svg--indeterminate"
        viewBox="0 0 66 66"
      >
        <circle
          class="rmd-circular-progress__circle rmd-circular-progress__circle--indeterminate"
          cx="33"
          cy="33"
          r="30"
        />
      </svg>
    </span>
  </span>
</li>
`;

exports[`MenuItemCircularProgress > should apply the correct styling, HTML attributes, and allow a ref 2`] = `
<li
  class="rmd-list-item rmd-interaction-surface custom-class-name"
  data-testid="li"
  role="none"
>
  <span
    class="rmd-list-item__text"
  >
    <span
      aria-label="Loading"
      aria-valuemax="100"
      aria-valuemin="0"
      class="rmd-circular-progress rmd-circular-progress--dense rmd-circular-progress--centered rmd-primary-color"
      id="circular-progress-_r_0_"
      role="progressbar"
      style="color: white;"
    >
      <svg
        class="rmd-circular-progress__svg rmd-circular-progress__svg--indeterminate"
        viewBox="0 0 66 66"
      >
        <circle
          class="rmd-circular-progress__circle rmd-circular-progress__circle--indeterminate"
          cx="33"
          cy="33"
          r="30"
        />
      </svg>
    </span>
  </span>
</li>
`;
